2003-08-20  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Mention documentation of exit status.
	* qm/test/cmdline.py (QMTest.Execute): Use the return value from
	__ExecuteCreateTdb.
	(QMTest.__ExecuteCreate): Return a value explicitly.
	(QMTest.__ExecuteCreateTdb): Likewise.
	(QMTest.__ExecuteCreateTarget): Likewise.
	(QMTest.__ExecuteSummarize): Likewise.
	(QMTest.__ExecuteRun): Likewise.
	* qm/test/qmtest.py: Simplify handling of exit codes.
	* qm/test/classes/mount_database.py: Fix typo in doc-string.
	* qm/test/doc/reference.xml: Document exit status.

2003-08-18  Nathaniel Smith  <njs@codesourcery.com>

	* qm/common.py (verbose): Remove variable.
	* qm/test/cmdline.py (QMTest.verbose_option_spec): Remove.
	(QMTest.global_options_spec): Remove 'verbose_option_spec'.
	(QMTest.Execute): Don't set 'qm.common.verbose'.
	* qm/test/doc/reference.xml: Don't document -v/--verbose switch.

2003-08-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (Executable.Spawn): Remove __has_*_run variables.
	(Executable._InitializeParent): Likewise.
	(Executable._HandleChild): Likewise.
	(Executable._InitializeChild): Likewise.
	(Executable._DoParent): Likewise.
	* qm/platform_win32.py (get_user_name): Remove.
	* qm/platform_unix.py (send_email): Remove.
	(get_user_name): Remove.
	* qm/regression_test.py: Remove file.	
	
	* qm/test/doc/reference.xml (Field Classes): Fix typo.

	* qm/test/file_result_stream.py (FileResultStream.__init__): Fix
	indentation.
	
2003-08-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (TimeoutExecutable._HandleChild): Close all
	fds in the monitor process.
	* tests/xmldb/test.qms/classes.qms/scripttest_closes_stdin.qmt:
	New test.
	
2003-08-14  Nathaniel Smith  <njs@codesourcery.com>

	* qm/executable.py (RedirectedExecutable._InitializeChild): Fix
	indentation.

2003-08-14  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (TimeoutExecutable.__init__): Document -2 value
	for timeout.